<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/welcome_to_vib" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mOnClick"
        android:text="@string/vibration1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mOnClick"
        android:text="@string/vibration_continue" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mOnClick"
        android:text="@string/vibration_stop" />
    
    <Button
        android:id="@+id/custom_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="mOnClick"
        android:text="@string/custom_image" />

</LinearLayout>
